--- a/source/WorkerService3/appsettings.json
+++ b/source/WorkerService3/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "MinWorkerThreads": 19,
-  "MinCompletionThreads": 11
+  "MinCompletionThreads": 11,
+  "DOTNET_PROCESSOR_COUNT": 80
 }
